Bug 165670 - FILESAVE PPTX PowerPoint cannot open file after round-tripped by LO
Summary: FILESAVE PPTX PowerPoint cannot open file after round-tripped by LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, filter:pptx, regression
Depends on:
Blocks: PPTX-Corrupted
  Show dependency treegraph
 
Reported: 2025-03-10 14:16 UTC by Justin L
Modified: 2025-04-25 13:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-03-10 14:16:05 UTC
When testing bug 165336 with PowerPoint 2010, after LO 25.2.2 round-trips forum-mso-en-11064.pptx (attachment 199289 [details]), then PP complains that the file cannot be opened, and needs to repair, but that "removes unreadable content".

This started in 25.8 (backported to 25.2.2)
with commit 86d36ee56521438069504fbacff8dc2aff3a1afc
Author: Tibor Nagy on Date:   Sun Feb 23 21:35:17 2025 +0100
    tdf165262 PPTX export: fix shape export regression

Steps to reproduce
1.) open mso-en-11064.pptx in Powerpoint. Notice it opens fine.
2.) open and resave in LO 25.2.2 or newer
3.) open the resaved file in Powerpoint. Lots of dialogs, and unable to repair.
Comment 1 Commit Notification 2025-03-20 15:49:24 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/612891865a74777950ab7355a4d794fa5577c5fc

tdf#165670 PPTX export: fix glue points export regression

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-03-21 13:50:35 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/95128d92bce952e0df3f3be6f9a4d126a05426df

tdf#165670 PPTX export: fix glue points export regression

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.