tdf#165670 PPTX export: fix glue points export regression

In some cases, we exported non-integer values for the glue points,
and their positions were also incorrect.

this regression is
caused by commit Id4a127e7ef462611bf63da791717f8260ec51be0
(tdf165262 PPTX export: fix shape export regression).

Change-Id: I978fa180ef181391651abad5c2b748e0b606b320
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183165
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 612891865a74777950ab7355a4d794fa5577c5fc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183177
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>