sd/qa/unit/export-tests-ooxml3.cxx
@@ -27,6 +27,31 @@ public:
     int testTdf115005_FallBack_Images(bool bAddReplacementImages);
 };
 
+CPPUNIT_TEST_FIXTURE(SdOOXMLExportTest3, testTdf165670)
+{
+    createSdImpressDoc("pptx/tdf165670.pptx");
+    save(u"Impress Office Open XML"_ustr);
+
+    xmlDocUniquePtr pXmlDoc1 = parseExport(u"ppt/slides/slide1.xml"_ustr);
+
+    // glue points export
+    // without the fix in place, this test would have failed with
+    // - Expected: "*/ 690465 w 2407298"
+    // - Actual  : "*/ 1917.97586131837 w 5236"
+    assertXPath(pXmlDoc1, "/p:sld/p:cSld/p:spTree/p:sp/p:spPr/a:custGeom/a:gdLst/a:gd[5]", "name",
+                u"GluePoint1X");
+    assertXPath(pXmlDoc1, "/p:sld/p:cSld/p:spTree/p:sp/p:spPr/a:custGeom/a:gdLst/a:gd[5]", "fmla",
+                u"*/ 690465 w 2407298");
+
+    // without the fix in place, this test would have failed with
+    // - Expected: "*/ 802433 h 1884784"
+    // - Actual  : "*/ 2229.18869642357 h 6687"
+    assertXPath(pXmlDoc1, "/p:sld/p:cSld/p:spTree/p:sp/p:spPr/a:custGeom/a:gdLst/a:gd[6]", "name",
+                u"GluePoint1Y");
+    assertXPath(pXmlDoc1, "/p:sld/p:cSld/p:spTree/p:sp/p:spPr/a:custGeom/a:gdLst/a:gd[6]", "fmla",
+                u"*/ 802433 h 1884784");
+}
+
 CPPUNIT_TEST_FIXTURE(SdOOXMLExportTest3, testTdf165262)
 {
     createSdImpressDoc("ppt/tdf165262.ppt");
